# yamalgam

./: .bito.yaml  .gitignore  .justfile  .repo.yml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/code-annotations/: SKILL.md
.claude/skills/idiomatic-rust/: SKILL.md
.config/: deny.toml  rustfmt.toml  scrat.toml
.config/tracey/: config.styx
.github/: coda.yml  dependabot.yml
.github/actions/generate-release-changelog/: action.yml
.github/actions/setup-cargo-tools/: action.yml
.github/workflows/: benchmarks.yml  cd.yml  ci.yml  dependabot-issues.yml  lint-pr.yml  release.yml
.handoffs/: 2026-03-06-180000-scanner-foundation-milestone-1.md  2026-03-06-230000-scanner-state-machine-milestone-2.md  2026-03-06-233000-scanner-compliance-push.md  2026-03-06-234500-block-scalar-folding-compliance.md  2026-03-07-190000-scanner-compliance-89-percent.md  2026-03-07-2330-m7a3-parser-fix.md  2026-03-08-0030-security-hardening-fuzzing-benchmarks.md  2026-03-08-1730-resolver-value-tracey-spec-traceability.md  2026-03-08-1922-code-review-fixes.md  2026-03-08-2100-tracey-version-migration-wip.md  2026-03-08-2200-tracey-version-migration-complete.md  2026-03-08-2300-tracey-impl-annotations.md  2026-03-09-0115-scanner-tab-fixes-and-tooling.md  2026-03-09-0630-m8-complete-m9-next.md  2026-03-09-1030-m9-serde-deserializer-prs-ready.md  2026-03-09-2200-m7-complete-full-fidelity-event-stream.md  2026-03-09-2330-m8-m9-overnight-session.md  2026-03-27-2301-m9-remaining-and-infra-cleanup.md  2026-04-08-1045-cased-audit-remediation.md  2026-06-10-1421-audit-complete-m9-next.md  2026-06-10-2008-librebar-migration-m10-next.md
bench-reports/: comparative-2026-03-08_0014.txt  parser-2026-03-08_0016.txt  scanner-2026-03-08_0016.txt
crates/yamalgam/: Cargo.toml  yamalgam.jsonl.2026-03-08
crates/yamalgam-bench/: Cargo.toml
crates/yamalgam-bench/benches/: comparative.rs
crates/yamalgam-bench/src/: inputs.rs  lib.rs  peers.rs
crates/yamalgam-compare/: Cargo.toml
crates/yamalgam-compare/src/: c_baseline.rs  compare.rs  event_snapshot.rs  harness.rs  lib.rs  snapshot.rs  test_case.rs  tree_format.rs
crates/yamalgam-compare/tests/: compare_tests.rs  compliance.rs  cst_round_trip.rs  serde_round_trip.rs
crates/yamalgam-compose/: Cargo.toml
crates/yamalgam-compose/src/: lib.rs
crates/yamalgam-compose/tests/: compose.rs
crates/yamalgam-core/: Cargo.toml
crates/yamalgam-core/benches/: benchmarks.kdl  divan_benchmarks.rs  gungraun_benchmarks.rs
crates/yamalgam-core/src/: config.rs  diagnostic.rs  error.rs  lib.rs  loader.rs  observability.rs  tag.rs  tag_resolution.rs  value.rs
crates/yamalgam-mcp/: Cargo.toml
crates/yamalgam-mcp/src/: main.rs  paths.rs  tools.rs
crates/yamalgam-parser/: Cargo.toml
crates/yamalgam-parser/benches/: parser_bench.rs
crates/yamalgam-parser/src/: compose.rs  error.rs  event.rs  lib.rs  parser.rs  resolve.rs
crates/yamalgam-parser/tests/: compose.rs  parser.rs  types.rs
crates/yamalgam-scanner/: Cargo.toml
crates/yamalgam-scanner/benches/: scanner_bench.rs
crates/yamalgam-scanner/src/: atom.rs  input.rs  lib.rs  reader.rs  scanner.rs  style.rs  token.rs
crates/yamalgam-scanner/tests/: error_kinds.rs  scanner.rs  types.rs
crates/yamalgam-serde/: Cargo.toml
crates/yamalgam-serde/src/: de.rs  documents.rs  error.rs  lib.rs
crates/yamalgam-serde/tests/: anchors.rs  collections.rs  compat.rs  contract_violations.rs  error_stash.rs  integration.rs  multi_doc.rs  scalars.rs  structs.rs  value.rs
crates/yamalgam-serde/tests/fixtures/: FIXTURES.md
crates/yamalgam-serde/tests/fixtures/real-world/ansible/: playbook.yml
crates/yamalgam-serde/tests/fixtures/real-world/docker-compose/: compose.yaml
crates/yamalgam-serde/tests/fixtures/real-world/github-actions/: ci.yml
crates/yamalgam-serde/tests/fixtures/real-world/gitlab-ci/: .gitlab-ci.yml
crates/yamalgam-serde/tests/fixtures/real-world/helm/: values.yaml
crates/yamalgam-serde/tests/fixtures/real-world/kubernetes/: deployment.yaml
crates/yamalgam-serde/tests/fixtures/real-world/misc/: openapi.yaml  prometheus.yml
crates/yamalgam/src/: config.rs  lib.rs  main.rs
crates/yamalgam/src/commands/: doctor.rs  info.rs
crates/yamalgam/tests/: config_integration.rs
docs/code-reviews/: codex-53-high-03-08-2026.md
docs/decisions/: 0001-port-libfyaml-state-machine-redesign-data-structures.md  0002-preserve-atom-concept-for-cst-fidelity.md  0003-comparison-mcp-server-for-correctness-verification.md  0004-utf8-16-32-encoding-support-from-day-one.md  0005-parser-event-model-with-inline-directives.md  0006-loaderconfig-for-resource-limits-and-security-policy.md  0007-resolver-trait-for-event-stream-middleware.md  README.md
docs/diagrams/: README.md
docs/plans/: 2026-03-06-scanner-foundation-design.md  2026-03-06-scanner-foundation-plan.md  2026-03-07-fuzzing-benchmarks-loaderconfig-design.md  2026-03-07-fuzzing-benchmarks-loaderconfig-implementation.md  2026-03-07-parser-layer-design.md  2026-03-07-parser-layer-plan.md  2026-03-08-code-review-fixes.md  2026-03-08-event-consumers-and-resolver-design.md  2026-03-08-resolver-and-value-plan.md  2026-03-08-tracey-version-migration-design.md  2026-03-08-tracey-version-migration.md  2026-03-09-archive-libfyaml-design.md  2026-03-09-full-fidelity-event-stream-design.md  2026-03-09-tag-resolution-trait-design.md  2026-03-09-tag-resolution-trait-plan.md  README.md
docs/spec/: yg-query-language-spec-draft-01.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_differential.rs  fuzz_limits.rs  fuzz_parser_bytes.rs  fuzz_parser_structured.rs  fuzz_scanner_bytes.rs  fuzz_scanner_structured.rs
fuzz/src/: lib.rs
scripts/: add-crate  extract-test-yaml.py  seed-fuzz-corpus  update-test-suite
site/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
tools/fyaml-tokenize/: .gitignore  Makefile  main.c
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bench.rs  mod.rs
(+21 files in other folders)
