[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
yamalgam = { path = "../crates/yamalgam" }
