[package]
name = "yamalgam-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Comparative benchmarks for yamalgam vs YAML peers"
publish = false

[dependencies]
yamalgam-scanner = { path = "../yamalgam-scanner" }
yamalgam-parser = { path = "../yamalgam-parser" }

# Peers — pinned for reproducible benchmarks
yaml_serde = "0.10"
libyaml-safer = "0.3"
yaml-rust2 = "0.11"
saphyr-parser = "0.0.6"
saphyr = "0.0.6"
serde-saphyr = "0.0.27"
rust-yaml = "1.1"
serde_json = "1.0"

# Optional peers — require external native libraries
yamlstar = { version = "0.1", optional = true }

[features]
yamlstar = ["dep:yamlstar"]

[dev-dependencies]
divan = "0.1"

[lints]
workspace = true

[[bench]]
name = "comparative"
harness = false
