[package]
name = "yamalgam-compare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "YAML Test Suite compliance and cross-implementation comparison"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
yamalgam-core = { path = "../yamalgam-core" }
yamalgam-parser = { path = "../yamalgam-parser" }
yamalgam-scanner = { path = "../yamalgam-scanner" }

[dev-dependencies]
datatest-stable = "0.3"
pretty_assertions = "1"

[[test]]
name = "compliance"
harness = false

[lints]
workspace = true
