[package]
name = "yamalgam-compare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "YAML Test Suite compliance and cross-implementation comparison"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yamalgam-cst = { path = "../yamalgam-cst" }
yamalgam-parser = { path = "../yamalgam-parser" }
yamalgam-scanner = { path = "../yamalgam-scanner" }

[dev-dependencies]
datatest-stable = "0.3"

[[test]]
name = "compliance"
harness = false

[[test]]
name = "cst_round_trip"
harness = false

[lints]
workspace = true
