[package]
name = "yamalgam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for yamalgam"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.editorconfig",
    "/.markdownlint.yaml",
    "/.yamllint",
    "/.envrc",
    "/.env",
    "/.env.rust",

    "/bench-reports/",
    "/scripts/",

    "/docs/",
    "/deny.toml",
    # Example config files
    "/*.example",
]

[dependencies]
anyhow = "1.0"
camino = { version = "1.2", features = ["serde1"] }
directories = "6.0"
figment = { version = "0.10", features = ["toml", "yaml", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[dev-dependencies]
tempfile = "3.26"
divan = "0.1"

[lints]
workspace = true

[[bench]]
name = "divan_benchmarks"
harness = false


