[package]
name = "yamalgam-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server for scanner comparison during development"
publish = false

[dependencies]
anyhow = "1.0"
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yamalgam-compare = { path = "../yamalgam-compare" }
yamalgam-scanner = { path = "../yamalgam-scanner" }

[lints]
workspace = true
