[package]
name = "yamalgam-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server for scanner comparison during development"
publish = false

[dependencies]
anyhow = "1.0"
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
yamalgam-compare = { path = "../yamalgam-compare" }
yamalgam-core = { version = "0.1", path = "../yamalgam-core" }

[package.metadata.cargo-shear]
# serde_json is used by rmcp macros for tool parameter schemas
ignored = ["serde_json"]

[lints]
workspace = true
