[package]
name = "yamalgam-parser"
description = "YAML 1.2 pull parser — events from tokens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
thiserror = "2.0"
yamalgam-core = { path = "../yamalgam-core" }
yamalgam-scanner = { path = "../yamalgam-scanner" }

[dev-dependencies]
pretty_assertions = "1"
divan = "0.1"

[[bench]]
name = "parser_bench"
harness = false
