[package]
name = "yamalgam-serde"
description = "Streaming serde Deserializer for YAML"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
erased-serde = "0.4"
serde = "1.0"
thiserror = "2.0"
yamalgam-core = { path = "../yamalgam-core" }
yamalgam-parser = { path = "../yamalgam-parser" }

[dev-dependencies]
pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
